k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  namespace: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
